--- a/lib/Version/Semantic.pod
+++ b/lib/Version/Semantic.pod
@@ -10,19 +10,33 @@ Version::Semantic - Tiny SemVer based class implementation
 
   my $v_unstable = Version::Semantic->parse( '1.0.0-alpha' );
   my $v_testing  = Version::Semantic->parse( '1.0.0-beta' );
-  my $v_stable   = Version::Semantic->parse( '1.0.0' );
+  my $v_stable   = Version::Semantic->parse( 'v1.0.0' );
 
   if ( $v_unstable < $v_testing and $v_testing < $v_stable ) {
-
+    ...
   }
 
 =head1 DESCRIPTION
 
-This class provides immutable version objects that support the L<Semantic
-Versioning Specification (SemVer)|https://semver.org/spec/v2.0.0.html>. It
-has a C<parse()> factory method. An object of that class has the
-attributes C<major>, C<minor>, C<patch>, C<pre_release>, and C<build>.
-The object method C<compare_to()> implements the L<precedence
+This class defines immutable version objects that support the L<Semantic
+Versioning Specification (SemVer)|https://semver.org/spec/v2.0.0.html>.
+
+The class has a C<parse()> factory method to create objects from their string
+representation. The method accepts semantic version strings that have a
+C<v> prefix.
+
+Each object has the mandatory attributes C<major>, C<minor>,
+and C<patch>.  Optional object attributes are C<pre_release> and
+C<build>. C<has_pre_release()> and C<has_build_()> predicate methods exist too.
+
+The C<version_core()> object method returns the semantic version string of
+an object without the C<v> prefix and pre-release and build extensions.
+
+The C<to_string()> object method returns the semantic version string of an
+object without the C<v> prefix. It is used to overload the stringification
+C<""> operator.
+
+The C<compare_to()> object method implements the L<precedence
 rules|https://semver.org/spec/v2.0.0.html#spec-item-11>. It is used to
 overload the numeric comparison C<E<lt>=E<gt>> operator. This allows you to
 compare version objects.
@@ -30,10 +44,6 @@ compare version objects.
 =head1 SEE ALSO
 
 =over 2
-
-=item *
-
-L<Semantic Versioning 2.0.0|https://semver.org/spec/v2.0.0.html>
 
 =item *
 
