--- a/lib/Version/Semantic.pod
+++ b/lib/Version/Semantic.pod
@@ -29,12 +29,13 @@ Each object has the mandatory attributes C<major>, C<minor>,
 and C<patch>.  Optional object attributes are C<pre_release> and
 C<build>. C<has_pre_release()> and C<has_build_()> predicate methods exist too.
 
-The C<version_core()> object method returns the semantic version string of
-an object without the C<v> prefix and without pre-release and build extensions.
+The C<version_core()> object method returns the semantic version string of an
+object with the C<v> prefix (if originally set) but without the pre-release
+and the build extensions.
 
 The C<to_string()> object method returns the semantic version string of an
-object without the C<v> prefix. It is used to overload the stringification
-C<""> operator.
+object with the C<v> prefix (if originally set). It is used to overload the
+stringification C<""> operator.
 
 The C<compare_to()> object method implements the L<SemVer precedence
 rules|https://semver.org/spec/v2.0.0.html#spec-item-11>. It is used to
