Update documentation before first release

--- a/lib/Version/Semantic.pod
+++ b/lib/Version/Semantic.pod
@@ -23,7 +23,8 @@ Versioning Specification (SemVer)|https://semver.org/spec/v2.0.0.html>.
 
 The class has a C<parse( $version )> factory method (a class method)
 to create objects from their semantic version strings. The method accepts
-semantic version strings that have a C<v> prefix.
+semantic version strings that have a C<v> prefix (L<Is "v1.2.3" a semantic
+version?|https://semver.org/spec/v2.0.0.html#is-v123-a-semantic-version>).
 
 Each object has the mandatory attributes C<major>, C<minor>,
 and C<patch>.  Optional object attributes are C<pre_release> and
@@ -34,13 +35,13 @@ object with the C<v> prefix (if originally set) but without the pre-release
 and the build extensions.
 
 The C<to_string()> object method returns the semantic version string of an
-object with the C<v> prefix (if originally set). It is used to overload the
-stringification C<""> operator.
+object including the C<v> prefix (if originally set). The method is used to
+overload the stringification C<""> operator.
 
 The C<compare_to()> object method implements the L<SemVer precedence
-rules|https://semver.org/spec/v2.0.0.html#spec-item-11>. It is used to
-overload the numeric comparison C<E<lt>=E<gt>> operator. This allows you to
-compare version objects.
+rules|https://semver.org/spec/v2.0.0.html#spec-item-11>. This method is used
+to overload the numeric comparison C<E<lt>=E<gt>> operator. This allows you
+to compare version objects.
 
 =head1 SEE ALSO
 
