--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
 Release history for Version-Semantic
 
-1.0.0    Mon Jan  5 01:59:09 PM CET 2026
+1.0.0    Thu Jan  8 08:21:29 AM CET 2026
          - Initial release
