Add missing changes file to manifest file

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 NAME
 
-Version::Semantic - Tiny SemVer based class implementation
+Version::Semantic - Immutable SemVer scheme based version class
 
 INSTALLATION
 
