--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Release history for Version-Semantic
 
+1.0.1    Fri Jan  9 07:16:56 AM CET 2026
+         - Add missing changes file to manifest file
+         - Improve and extend documentation
+
 1.0.0    Thu Jan  8 08:21:29 AM CET 2026
          - Initial release
