--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Release history for Version-Semantic
 
-1.0.1    Fri Jan  9 07:16:56 AM CET 2026
+1.0.1    Tue Jan 20 09:02:44 PM CET 2026
          - Add missing changes file to manifest file
+         - Simplify Makefile.PL modulino setup
          - Improve and extend documentation
 
 1.0.0    Thu Jan  8 08:21:29 AM CET 2026
