--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Release history for Version-Semantic
 
-1.0.1    Tue Jan 20 09:02:44 PM CET 2026
+1.0.1    Wed Jan 21 07:26:13 AM CET 2026
          - Add missing changes file to manifest file
          - Simplify Makefile.PL modulino setup
          - Improve and extend documentation
